# scorex_crypto_avltree

./: .gitignore  Cargo.toml  README.md  crypto_avltree.md
src/: authenticated_tree_ops.rs  batch_avl_prover.rs  batch_avl_verifier.rs  batch_node.rs  lib.rs  operation.rs  persistent_batch_avl_prover.rs  versioned_avl_storage.rs
tests/: avl_batch_specification.rs
tests/common/: mod.rs
tests/scala_proves/: proof1.dmp  proof2.dmp
