[package]
name = "scorex_crypto_avltree"
version = "0.1.0"
authors = ["Konstantin Knizhnik <knizhnik@garret.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0.1" }
rand = "0.8.3"
blake2 = "0.9"
anyhow = "1.0"
byteorder = "1.4.3"
base16 = "0.2.1"
debug-cell = "0.1.1"
